--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>net.mlw</groupId>
 	<artifactId>vlh</artifactId>
-	<version>release</version>
+	<version>0.1.9-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>valuelist</name>
 	<description>Java Web Pages</description>
