--- a/release.properties
+++ b/release.properties
@@ -1,9 +1,16 @@
 #release configuration
-#Fri Jun 24 13:52:42 CST 2011
-preparationGoals=clean verify
-pushChanges=true
-scm.commentPrefix=[maven-release-plugin] 
-remoteTagging=true
-exec.additionalArguments=-P dev
-completedPhase=check-poms
+#Fri Jun 24 14:26:46 CST 2011
+project.scm.net.mlw\:vlh.connection=scm\:git\:ssh\://git@github.com/fqntxmqee/webframe
+scm.tag=vlh-0.1.9
 scm.url=scm\:git\:ssh\://git@github.com/fqntxmqee/webframe
+pushChanges=true
+preparationGoals=clean verify
+project.scm.net.mlw\:vlh.tag=HEAD
+project.rel.net.mlw\:vlh=0.1.9
+project.scm.net.mlw\:vlh.url=ssh\://git@github.com/fqntxmqee/webframe
+project.dev.net.mlw\:vlh=0.1.10-SNAPSHOT
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
+project.scm.net.mlw\:vlh.developerConnection=scm\:git\:ssh\://git@github.com/fqntxmqee/webframe
+exec.additionalArguments=-P dev
+completedPhase=run-preparation-goals
