--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>net.mlw</groupId>
 	<artifactId>vlh</artifactId>
-	<version>0.1.11-SNAPSHOT</version>
+	<version>0.1.10-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>valuelist</name>
@@ -21,9 +21,9 @@
 	</licenses>
 
 	<scm>
-		<url>ssh://git@github.com/fqntxmqee/webframe</url>
-		<connection>scm:git:ssh://git@github.com/fqntxmqee/webframe</connection>
-		<developerConnection>scm:git:ssh://git@github.com/fqntxmqee/webframe</developerConnection>
+		<url>ssh://git@github.com/fqntxmqee/valuelist</url>
+		<connection>scm:git:ssh://git@github.com/fqntxmqee/valuelist</connection>
+		<developerConnection>scm:git:ssh://git@github.com/fqntxmqee/valuelist</developerConnection>
 	</scm>
 
 	<developers>
@@ -284,7 +284,6 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.1</version>
 				<configuration>
-					<pushChanges>false</pushChanges>
 					<mavenExecutorId>forked-path</mavenExecutorId>
 				</configuration>
 			</plugin>
