--- a/release.properties
+++ b/release.properties
@@ -1,16 +1,16 @@
 #release configuration
-#Fri Jun 24 14:26:46 CST 2011
+#Fri Jun 24 15:09:10 CST 2011
 project.scm.net.mlw\:vlh.connection=scm\:git\:ssh\://git@github.com/fqntxmqee/webframe
-scm.tag=vlh-0.1.9
+scm.tag=vlh-0.1.10
 scm.url=scm\:git\:ssh\://git@github.com/fqntxmqee/webframe
-pushChanges=true
+pushChanges=false
 preparationGoals=clean verify
 project.scm.net.mlw\:vlh.tag=HEAD
-project.rel.net.mlw\:vlh=0.1.9
+project.rel.net.mlw\:vlh=0.1.10
 project.scm.net.mlw\:vlh.url=ssh\://git@github.com/fqntxmqee/webframe
-project.dev.net.mlw\:vlh=0.1.10-SNAPSHOT
+project.dev.net.mlw\:vlh=0.1.11-SNAPSHOT
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
 project.scm.net.mlw\:vlh.developerConnection=scm\:git\:ssh\://git@github.com/fqntxmqee/webframe
 exec.additionalArguments=-P dev
-completedPhase=run-preparation-goals
+completedPhase=end-release
