--- a/pom.xml
+++ b/pom.xml
@@ -342,11 +342,17 @@
 	
 
 	<!-- distribut -->
-	<distributionManagement> 
-		<repository> <id>nexus-releases</id> <name>Nexus Release Repository</name> 
-		<url>http://192.168.1.250/nexus/content/repositories/releases</url> </repository> 
-		<snapshotRepository> <id>nexus-snapshots</id> <name>Nexus Snapshot Repository</name> 
-		<url>http://192.168.1.250/nexus/content/repositories/snapshots</url> </snapshotRepository> 
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Nexus Release Repository</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		</repository>
 	</distributionManagement>
 
 	<profiles>
