--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>net.mlw</groupId>
 	<artifactId>vlh</artifactId>
-	<version>0.1.13</version>
+	<version>0.1.14-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>valuelist</name>
